// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter prop 1`] = `
<div class="van-picker">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button><button type="button" class="van-picker__confirm">确认</button></div>
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">00</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">05</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">10</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">15</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">20</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">00</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">10</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">20</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">30</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">40</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">50</div>
        </li>
      </ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`format initial value 1`] = `
<div class="van-picker">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button><button type="button" class="van-picker__confirm">确认</button></div>
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">22</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">23</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">58</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">59</div>
        </li>
      </ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`formatter prop 1`] = `
<div class="van-picker">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button><button type="button" class="van-picker__confirm">确认</button></div>
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">00 hour</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">05 hour</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">10 hour</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">15 hour</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">20 hour</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">00 minute</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">10 minute</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">20 minute</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">30 minute</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">40 minute</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">50 minute</div>
        </li>
      </ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`max-hour & max-minute 1`] = `
<div class="van-picker">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button><button type="button" class="van-picker__confirm">确认</button></div>
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">00</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">01</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">02</div>
        </li>
      </ul>
    </div>
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">00</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">01</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">
          <div class="van-ellipsis">02</div>
        </li>
      </ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;
